# numba-xraylib

./: .gitignore  404.html  README.md  index.html  meson.build  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: python-package-conda.yml  python-package.yml
docs/: index.md  ruff.toml  supported.md  xrl_license.md
docs/examples/: numba_xraylib_example.ipynb
docs/stylesheets/: extra.css
examples/numba_xraylib_example/: index.html
numba_xraylib/: __init__.py  config.py  meson.build  overload_xraylib.py  overload_xraylib_np.py  utils.py  xraylib_overloads.py  xraylib_overloads_new.py
search/: search_index.json
supported/: index.html
tests/: test_xraylib_numba.py  utilitites.py
xraylib_numba/: __init__.py  config.py  xraylib_np_numba.py  xraylib_numba.py  xraylib_overloads.py
