# tells pip what build tool to use to build your package
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

# tells pip how to build your pypi webpage & what dependencies to install
[project]
authors = [
  {name = "Chris Ninham", email = "christopher.ninham@creatis.insa-lyon.fr"},
]
dependencies = ["numba", 'tomli; python_version < "3.11"']
description = "A numba compatible wrapper of the xraylib library."
dynamic = ["readme"]
name = "xraylib_numba"
version = "0.1"
requires-python = ">=3.8"

[project.optional-dependencies]
xraylib_numba = ["numpy"]
tests = ["pytest"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
xraylib_numba = ["xraylib_numba/config.toml"]

# (OPTIONAL) tells pypi that these urls are where your project's source code and issue tracker reside
# [project.urls]
# "Homepage" = "https://github.com/pypa/packaging.python.org"
# "Bug Tracker" = "https://github.com/pypa/packaging.python.org/issues"

[tool.setuptools]
py-modules = ["xraylib_numba"]
